examples/test/testpolicy1985.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1985
  namespace: namespace302
spec:
  podSelector:
    matchLabels:
      key33: value12
      key40: value1
      key36: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value16
      podSelector:
        matchLabels:
          key4: value11
